# meetballs.org

./: .env.example  Cargo.toml  README.md  build.rs  composer.json  package-lock.json  package.json  shell.nix  tailwind.config.js  vite.config.js
app/Filament/Pages/: ImportProjects.php
app/Filament/Resources/: HostResource.php  ProjectResource.php  TagResource.php
app/Http/Controllers/: HomeController.php  ProjectController.php
app/Jobs/: AutoToggleFeaturedProject.php
app/Libraries/Helper/: helper.php
app/Libraries/Importer/: Parser.php  Project.php  ProjectLink.php
app/Libraries/Projects/: Parser.php  Project.php
app/Models/: Host.php  HostImage.php  HostLink.php  Project.php  ProjectLink.php  Tag.php  User.php
app/Providers/Filament/: AdminPanelProvider.php
app/View/Components/: Avatar.php  FeaturedProject.php  ProjectCard.php  Tag.php
database/migrations/: 2024_10_17_132022_create_hosts_table.php  2024_10_17_132111_create_host_links_table.php  2024_10_17_132141_create_projects_table.php  2024_10_17_132200_create_project_links_table.php  2024_10_17_132400_create_tags_table.php  2024_10_17_134354_create_host_images_table.php  2025_02_12_115539_add_event_date_to_projects_table.php
editor/: README.md  layout.kdl
resources/css/: app.css
resources/js/: bootstrap.js
resources/views/: home.blade.php  project.blade.php
routes/: console.php  web.php
src/: lib.rs  main.rs  parser.rs
templates/: 404.html.tera  index.html.tera
templates/components/: icons.html.tera  projects.html.tera
templates/layout/: base.html.tera
(+32 files in other folders)
