[package]
name = "meetballs-rs-org"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
hex = "0.4.3"
hmac = "0.12.1"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.196", features = ["derive"] }
sha2 = "0.10.8"
